--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,9 @@ dependencies = [
 
 [dependency-groups]
 dev = [
+    "pre-commit>=4.2.0",
     "pytest>=8.3.5",
+    "pytest-testmon>=2.1.3",
     "pytest-watcher>=0.4.3",
 ]
 
