--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,10 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 
-dependencies = [
-    "tiktoken>=0.9.0",
-    "torch>=2.6.0",
-]
+dependencies = ["tiktoken>=0.9.0", "torch>=2.6.0"]
 
 [dependency-groups]
 dev = [
@@ -19,6 +16,5 @@ dev = [
 ]
 
 [tool.pytest.ini_options]
-testpaths = [
-    "tests",
-]
+testpaths = ["tests"]
+pythonpath = "src"
