--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,18 +5,16 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 
-dependencies = [
-    "tiktoken>=0.9.0",
-    "torch>=2.6.0",
-]
+dependencies = ["tiktoken>=0.9.0", "torch>=2.6.0"]
 
 [dependency-groups]
 dev = [
+    "pre-commit>=4.2.0",
     "pytest>=8.3.5",
+    "pytest-testmon>=2.1.3",
     "pytest-watcher>=0.4.3",
 ]
 
 [tool.pytest.ini_options]
-testpaths = [
-    "tests",
-]
+testpaths = ["tests"]
+pythonpath = "src"
